src/widgets/snapshots/tvision__widgets__cluster__tests__snapshot_checkboxes.snap
---
source: src/widgets/cluster.rs
expression: "snapshot_cluster(&mut c, 14, 3)"
---
size: 14x3
cursor: hidden
text:
| [X] Alpha    |
| [ ] Beta     |
| [X] Gamma    |
attr:
|aaaaabaaaaaaaa|
|cccccccccccccc|
|aaaaaaaaaaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(3)
  b fg=BIOS(14) bg=BIOS(3)
  c fg=BIOS(15) bg=BIOS(3)
