src/widgets/snapshots/tvision__widgets__cluster__tests__snapshot_radiobuttons.snap
---
source: src/widgets/cluster.rs
expression: "snapshot_cluster(&mut c, 14, 3)"
---
size: 14x3
cursor: hidden
text:
| ( ) One      |
| (•) Two      |
| ( ) Three    |
attr:
|aaaaaaaaaaaaaa|
|bbbbbbbbbbbbbb|
|aaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(0,170,170)
  b fg=RGB(255,255,255) bg=RGB(0,170,170)
